metadata/force-app/main/default/objects/CustomName_YITpm__c/CustomName_YITpm__c.object-meta.xml
<CustomObject>
    <description>Description_vXBKk</description>
    <label>CustomLabel_WHqGa</label>
    <nameField>
        <label>CustomLabel_WHqGa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WHqGas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>