metadata/force-app/main/default/objects/CustomName_YITpm__c/fields/CustomField_Puymm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Puymm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgbNOH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>